Fix a bug with the header having a scrollbar.

--- a/content/assets/stylesheets/stylesheet.scss
+++ b/content/assets/stylesheets/stylesheet.scss
@@ -130,7 +130,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   justify-content: space-between;
   white-space: nowrap;
-  overflow-x: hidden;
+  overflow: hidden;
 
   img {
     position: absolute;
